--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start": "node build"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.0",
 		"@sveltejs/vite-plugin-svelte": "^2.4.0",
 		"@tailwindcss/typography": "^0.5.16",
