--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,16 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": false,
-		"moduleResolution": "bundler"
-	}
+		"moduleResolution": "bundler",
+		"target": "ES2020",
+		"module": "ESNext",
+		"verbatimModuleSyntax": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"strict": false,
+		"skipLibCheck": true
+	},
+	"include": ["src/**/*"],
+	"exclude": ["node_modules/*", ".svelte-kit/*"]
 }
