--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"start": "node build"
+		"prepare": "svelte-kit sync || echo ''"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/adapter-netlify": "^2.0.0",
 		"@sveltejs/kit": "^1.20.0",
 		"@sveltejs/vite-plugin-svelte": "^2.4.0",
 		"@tailwindcss/typography": "^0.5.16",
